just fidding around with svgs # 50-character subject line # # 72-character wrapped longer description. This should answer: # # * Why was this change necessary? # * How does it address the problem? # * Are there any side effects? # # Include a link to the ticket, if any.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
- 
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -27,6 +27,24 @@
 
 </head>
 <body>
+
+  <svg x="0px" y="0px" style="display:none">
+    <symbol id="d6" viewBox="0 0 320 320">
+      <rect
+        x="10" y="10" height="300" width="300">
+      </rect>
+  </symbol>
+    <symbol id="d12" viewBox="0 0 320 320">
+      <polygon
+        points="310,160 235,290 85,290 10,160 85,30 235,30">
+      </polygon>
+    </symbol>
+    <symbol id="d8" viewBox="0 0 220 320">
+      <path
+        d="M10,160 L110,10 L210,160 L110,310 z">
+      </path>
+    </symbol>
+  </svg>
 
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
