--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,8 @@
 </ion-header>
 
 <ion-content padding>
+  <p>
+    This die roller is made by <a href="#" onClick="window.open('http://www.twitter.com/pfooti', '_system', 'location=yes'); return false">@pfooti</a>. It is a fan creation and not intended to infringe any privately held copyrights or trademarks.
+  </p>
 
 </ion-content>
