--- a/src/pages/skill-roll/skill-roll.html
+++ b/src/pages/skill-roll/skill-roll.html
@@ -7,12 +7,22 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>skillRoll</ion-title>
+    <ion-title>Skill Roll</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <p>
+    Here's some dice.
+    <svg class="boost"><use xlink:href="#d6"></use></svg>
+    <svg class="setback"><use xlink:href="#d6"></use></svg>
+    <svg class="ability"><use xlink:href="#d8"></use></svg>
+    <svg class="difficulty"><use xlink:href="#d8"></use></svg>
+    <svg class="proficiency"><use xlink:href="#d12"></use></svg>
+    <svg class="challenge"><use xlink:href="#d12"></use></svg>
+    <svg class="force"><use xlink:href="#d12"></use></svg>
+  </p>
 
 </ion-content>
