states and stuff
# 50-character subject line
#
# 72-character wrapped longer description. This should answer:
#
# * Why was this change necessary?
# * How does it address the problem?
# * Are there any side effects?
#
# Include a link to the ticket, if any.

--- a/src/pages/skill-roll/skill-roll.html
+++ b/src/pages/skill-roll/skill-roll.html
@@ -14,6 +14,10 @@
 
 
 <ion-content padding>
+  <ion-fab bottom right (click)="doRoll()">
+    <button ion-fab>ROLL</button>
+  </ion-fab>
+
   <p>
     Here's some dice.
     <svg class="boost"><use xlink:href="#d6"></use></svg>
