--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Roll" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Critical" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="rollRoot" tabTitle="Roll" tabIcon="home"></ion-tab>
+  <ion-tab [root]="historyRoot" tabTitle="History" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="criticalRoot" tabTitle="Critical" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="aboutRoot" tabTitle="About" tabIcon="contacts"></ion-tab>
 </ion-tabs>
