working with SVG
# 50-character subject line
#
# 72-character wrapped longer description. This should answer:
#
# * Why was this change necessary?
# * How does it address the problem?
# * Are there any side effects?
#
# Include a link to the ticket, if any.

--- a/src/pages/roll-results/roll-results.html
+++ b/src/pages/roll-results/roll-results.html
@@ -27,4 +27,21 @@
         </svg>
       </div>
     </ion-card-content>
-  </ion-card></ion-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-header>Results</ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item> Success: {{results.success}} </ion-item>
+        <ion-item> Failure: {{results.failure}} </ion-item>
+        <ion-item> Advantage: {{results.advantage}} </ion-item>
+        <ion-item> Threat: {{results.threat}} </ion-item>
+        <ion-item> Triumph: {{results.triumph}} </ion-item>
+        <ion-item> Despair: {{results.despair}} </ion-item>
+        <ion-item> Dark: {{results.dark}} </ion-item>
+        <ion-item> Light: {{results.light}} </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+</ion-content>
