adding history, fixing a plump bug
# 50-character subject line
#
# 72-character wrapped longer description. This should answer:
#
# * Why was this change necessary?
# * How does it address the problem?
# * Are there any side effects?
#
# Include a link to the ticket, if any.

--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -1,13 +1,10 @@
-<!--
-  Generated template for the History page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>history</ion-title>
+    <button ion-button menuToggle="left">
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>History</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,4 +12,7 @@
 
 <ion-content padding>
   previous rolls
+  <ion-card *ngFor="let roll of history.history$ | async">
+    <ion-card-content>{{(roll | async).roller}}</ion-card-content>
+  </ion-card>
 </ion-content>
