--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,13 +1,10 @@
-<!--
-  Generated template for the Settings page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>settings</ion-title>
+    <button ion-button menuToggle="left">
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Settings</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,9 +13,11 @@
 <ion-content padding>
   <ion-item>
     <ion-label>Left-handed</ion-label>
-    <ion-toggle checked="false" [(ngModel)]="leftHanded" (ngModelChange)="toggleHand($event)"></ion-toggle>
+    <!-- <ion-toggle checked="false" [(ngModel)]="leftHanded" (ngModelChange)="toggleHand($event)"></ion-toggle> -->
+    <ion-toggle checked="false" [ngModel]="leftHanded" (ngModelChange)="toggleHand($event)"></ion-toggle>
   </ion-item>
-  <div>
-    {{ (settings$ | async)?.attributes.leftHanded }} # {{ leftHanded }}
-  </div>
+  <ion-item>
+    <ion-label>Name</ion-label>
+    <ion-input #nameInput [(ngModel)]="name"></ion-input>
+  </ion-item>
 </ion-content>
