rolls being added to history
have to preload history to make sure it exists
then figure out best displays thereof
history depends on name too
there's this pattern of a couple of global objects that
look like plump things but there's just one
but that is useful because they're observable.
this really is redux redux.

--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -13,6 +13,6 @@
 <ion-content padding>
   previous rolls
   <ion-card *ngFor="let roll of history.history$ | async">
-    <ion-card-content>{{(roll | async).roller}}</ion-card-content>
+    <ion-card-content>{{roll}}</ion-card-content>
   </ion-card>
 </ion-content>
