--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -13,6 +13,6 @@
 <ion-content padding>
   previous rolls
   <ion-card *ngFor="let roll of history.history$ | async">
-    <ion-card-content>{{roll}}</ion-card-content>
+    <ion-card-content *ngIf="roll | async; let roll">{{roll.attributes.roller}}</ion-card-content>
   </ion-card>
 </ion-content>
