page names history and stuff
# 50-character subject line
#
# 72-character wrapped longer description. This should answer:
#
# * Why was this change necessary?
# * How does it address the problem?
# * Are there any side effects?
#
# Include a link to the ticket, if any.

--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -11,8 +11,11 @@
 
 
 <ion-content padding>
-  previous rolls
-  <ion-card *ngFor="let roll of history.history$ | async">
-    <ion-card-content *ngIf="roll | async; let roll">{{roll.attributes.roller}}</ion-card-content>
-  </ion-card>
+  <ng-container *ngFor="let roll of history.history$ | async">
+    <roll-result [roll]="roll.attributes">
+    </roll-result>
+  </ng-container>
+  <button ion-button (click)="clear()">
+    Clear History
+  </button>
 </ion-content>
